# typer

./: .gitignore  dev.docker-compose.yaml  docker-compose.yaml  prod.docker-compose.yaml  requirements.txt  run_dev_env.sh  startup.sh
backend/: Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
backend/.github/workflows/: tests.yml
backend/app/: app_instance.py  constants.py  containers.py  db.py  logger.py  main.py  sample.env.yml
backend/app/custom_exceptions/: __init__.py  auth.py  registration_login.py  text_session_rating.py
backend/app/main/: app_factory.py
backend/app/middleware/: exception_handlers.py
backend/app/models/: __init__.py  enums.py  jwt_refresh_token.py  text.py  text_rating.py  typing_session.py  user.py
backend/app/repositories/: __init__.py  crud_operations.py  refresh_token_repository.py  text_rating_repository.py  text_repository.py  typing_session_repository.py  user_repository.py
backend/app/routers/: __init__.py  activate.py  login.py  refresh.py  register.py  text.py  text_rating.py  typing_session.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  hashing_service.py  text_rating_service.py  text_service.py  typing_session_service.py  user_service.py
backend/app/tests/: conftest.py  test_root.py  test_user_registration.py
backend/email_templates/: registration.html
backend/migrations/: README  env.py
backend/requirements/: development.txt
backend/scripts/: run_interactively.sh
backend/tests/: conftest.py  test_user_registration.py
(+153 files in other folders)
