[metadata]
name = Typer
description = TBD
author = Dimitrij KolniÄenko
licence = MIT
licence_file = LICENCE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = typer
install_requires =
    alembic==1.8.0
    argon2-cffi==21.3.0
    asyncpg==0.25.0
    dependency-injector==4.39.1
    fastapi-mail==1.0.9
    fastapi==0.78.0
    passlib==1.7.4
    psycopg2-binary==2.9.3
    PyJWT==2.4.0
    PyYAML==6.0
    sqlmodel==0.0.6
    uvicorn==0.18.1
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    aiosqlite==0.17.0
    httpx==0.23.0
    pytest==7.1.2
    pytest-cov==3.0.0
    pytest-asyncio==0.18.3
